--- a/assets/scss/_button.scss
+++ b/assets/scss/_button.scss
@@ -1,4 +1,5 @@
-.btn {
+.btn 
+{
 	border-radius: 0;
 	font-family: "Roboto Condensed", sans-serif;
 	text-transform: uppercase;
@@ -12,123 +13,145 @@
 .btn.focus,
 .btn:active.focus,
 .btn:active:focus,
-.btn:focus {
+.btn:focus 
+{
 	outline: 0;
 }
 
-.btn.btn-round {
+.btn.btn-round 
+{
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
 }
 
-.btn.btn-circle {
+.btn.btn-circle 
+{
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	border-radius: 30px;
 }
 
-.btn.btn-w {
+.btn.btn-w 
+{
 	background: rgba(255, 255, 255, .8);
 	color: #111;
 }
 
 .btn.btn-w:hover,
-.btn.btn-w:focus {
+.btn.btn-w:focus 
+{
 	background: rgba(255, 255, 255, 1);
 	color: #111;
 }
 
-.btn.btn-g {
+.btn.btn-g 
+{
 	background: #e5e5e5;
 	color: #111;
 }
 
 .btn.btn-g:hover,
-.btn.btn-g:focus {
+.btn.btn-g:focus 
+{
 	background: #d8d8d8;
 	color: #111;
 }
 
-.btn.btn-border-w {
+.btn.btn-border-w 
+{
 	background: transparent;
 	border: 1px solid rgba(255, 255, 255, .75);
 	color: #fff;
 }
 
 .btn.btn-border-w:hover,
-.btn.btn-border-w:focus {
+.btn.btn-border-w:focus 
+{
 	background: #fff;
 	border-color: transparent;
 	color: #111;
 }
 
-.btn.btn-d {
+.btn.btn-d 
+{
 	background: rgba(17, 17, 17, .8);
 	color: #fff;
 }
 
 .btn.btn-d:hover,
-.btn.btn-d:focus {
+.btn.btn-d:focus 
+{
 	background: rgba(17, 17, 17, 1);
 }
 
-.btn.btn-b {
+.btn.btn-b 
+{
 	background: rgba(17, 17, 17, 1);
 	color: #fff;
 }
 
 .btn.btn-b:hover,
-.btn.btn-b:focus {
+.btn.btn-b:focus 
+{
 	background: rgba(17, 17, 17, .8);
 }
 
-.btn-border-d {
+.btn-border-d 
+{
 	background: transparent;
 	border: 1px solid rgba(17, 17, 17, 1);
 	color: #111;
 }
 
 .btn.btn-border-d:hover,
-.btn.btn-border-d:focus {
+.btn.btn-border-d:focus 
+{
 	background: rgba(17, 17, 17, 1);
 	color: #fff;
 }
 
 
-.btn.btn-font-w {
+.btn.btn-font-w 
+{
 	background: rgba(255, 255, 255, .8);
 	color: #fff;
 }
-.btn.btn-font-w:hover {
+
+.btn.btn-font-w:hover 
+{
 	background: #fff;
 	color: #111;
 }
 
 /* Buttons size */
-
-.btn.btn-lg {
+.btn.btn-lg 
+{
 	padding: 12px 45px;
 	font-size: 13px;
 }
 
-.btn.btn-sm {
+.btn.btn-sm 
+{
 	padding: 6px 25px;
 	font-size: 10px;
 	letter-spacing: 1px;
 }
 
-.btn.btn-xs {
+.btn.btn-xs 
+{
 	padding: 4px 19px;
 	font-size: 10px;
 	letter-spacing: 0;
 }
 
-.btn-list .btn {
+.btn-list .btn 
+{
 	margin: 5px 0;
 }
 
-.search-btn {
+.search-btn 
+{
 	position: absolute;
 	background: transparent;
 	border: none;
@@ -144,6 +167,7 @@
 	margin-top: -20px;
 }
 
-.image-button {
+.image-button 
+{
 	margin: 0px 5px;
 }
