--- a/assets/scss/_comment_box.scss
+++ b/assets/scss/_comment_box.scss
@@ -1,10 +1,12 @@
 .comments,
-.comment-form {
+.comment-form 
+{
 	margin: 80px 0 0;
 }
 
 .comments .comment-title,
-.comment-form .comment-form-title {
+.comment-form .comment-form-title 
+{
 	border-bottom: 1px dotted #c2c2c2;
 	font-size: 16px;
 	color: #111;
@@ -12,31 +14,37 @@
 	margin: 0 0 20px;
 }
 
-.comment-author {
+.comment-author 
+{
 	font-size: 14px;
 	margin: 0 0 10px;
 }
 
-.comment-avatar {
+.comment-avatar 
+{
 	width: 55px;
 	float: left;
 	margin-top: 10px;
 }
 
-.comment-avatar img {
+.comment-avatar img 
+{
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	border-radius: 50%;
 }
 
-.comment-content {
+.comment-content 
+{
 	padding-top: 5px;
 	margin-left: 75px;
 	margin-bottom: 30px;
 }
 
-@media (min-width: 768px) {
-	.comment .comment {
+@media (min-width: 768px) 
+{
+	.comment .comment 
+	{
 		margin-left: 75px;
 	}
 }
